# kdev-verapp

./: .kde-ci.yml  CMakeLists.txt  Messages.sh  debug.cpp  debug.h  job.cpp  job.h  kdev-verapp.kdev4  kdevverapp.categories  kdevverapp.json  kdevverapp.qrc  kdevverapp.rc  parameters.cpp  parameters.h  plugin.cpp  plugin.h  problemmodel.cpp  problemmodel.h  utils.cpp  utils.h
config/: globalconfigpage.cpp  globalconfigpage.h  globalconfigpage.ui  globalsettings.kcfg  globalsettings.kcfgc  projectconfigpage.cpp  projectconfigpage.h  projectconfigpage.ui  projectsettings.kcfg  projectsettings.kcfgc
po/ar/: kdevverapp.po
po/ca/: kdevverapp.po
po/ca@valencia/: kdevverapp.po
po/cs/: kdevverapp.po
po/de/: kdevverapp.po
po/en_GB/: kdevverapp.po
po/eo/: kdevverapp.po
po/es/: kdevverapp.po
po/et/: kdevverapp.po
po/eu/: kdevverapp.po
po/fi/: kdevverapp.po
po/fr/: kdevverapp.po
po/ga/: kdevverapp.po
po/gl/: kdevverapp.po
po/he/: kdevverapp.po
po/it/: kdevverapp.po
po/ja/: kdevverapp.po
po/ka/: kdevverapp.po
po/ko/: kdevverapp.po
po/lt/: kdevverapp.po
po/nl/: kdevverapp.po
po/nn/: kdevverapp.po
po/pl/: kdevverapp.po
po/pt/: kdevverapp.po
po/pt_BR/: kdevverapp.po
po/ru/: kdevverapp.po
po/sk/: kdevverapp.po
po/sl/: kdevverapp.po
po/sv/: kdevverapp.po
po/tr/: kdevverapp.po
po/uk/: kdevverapp.po
po/zh_CN/: kdevverapp.po
po/zh_TW/: kdevverapp.po
rules/: Rules.md  rules.cpp  rules.h  rules_db.cpp  rules_db_create.py
tests/: CMakeLists.txt  test_verappjob.cpp  test_verappjob.h
